<resources>
    <string name="app_name">One Week v2</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="hint_title">Заголовок заметки:</string>
    <string name="hint_description">Описание заметки:</string>
    <string name="priority_one">1</string>
    <string name="priority_two">2</string>
    <string name="priority_three">3</string>
    <string name="button_save_note">Добавить заметку</string>
    <string name="warning_fill_fileds">Все поля должны быть заполнены</string>

    <string-array name="day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>
